[chore] 주석 삭제